# sports-attendance-forecast

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
.github/workflows/: data-refresh.yml  render-dashboard.yml  tests.yml
dashboard/: _quarto.yml  about.qmd  forecast.qmd  index.qmd  monitoring.qmd
data/: README.md
docker/: Dockerfile  docker-compose.yml
pipeline/: backfill.py  features.py  forecast.py  refresh.py  train.py  utils.py
tests/: conftest.py  test_data_quality.py  test_features.py  test_model_performance.py
