[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-attendance-forecast"
version = "0.1.0"
description = "An end-to-end MLOps pipeline forecasting sports game attendance using public APIs, LightGBM, MLflow, and Quarto dashboards"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "madebylemon", email = ""}]
keywords = ["mlops", "sports-analytics", "forecasting", "lightgbm", "mlflow", "github-actions", "quarto"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
exclude = [".git", "__pycache__", "venv", ".venv"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
